# Agentic-SOC-Co-Pilot

./: .gitignore  Product-Strategy.md  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: security.yml
api/: audit.py  dependencies.py  main.py  schemas.py  security.py
api/routes/: approval.py
docs/: demo_script.md  runbook.md  threat_model.md
finops/: anomaly.py  budget.py
infra/: db.py  observability.py
infra/grafana/: dashboard.json
langgraph/: graph.py  state.py
langgraph/agents/: verifier.py
langgraph/memory/: governance.py  redis_store.py  retriever.py  vector_store.py
langgraph/nodes/: analyst.py  planner.py  retriever.py  verifier.py
middleware/: accounting.py
models/: adapter.py  llm.py  local_adapter.py  prompts.py  stub_adapter.py
test_chroma_data/: chroma.sqlite3
tests/: test_api.py  test_approval.py  test_memory.py  test_red_team.py  test_security.py
tests/security/: run_redteam.py
tests/security/corpus/: injection.yaml
ui/: app.py
